--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,16 @@
             "email": "me@mitul.me"
         }
     ],
+    "repositories":[
+        {
+            "type": "vcs",
+            "url": "https://github.com/k2288/l5-repository.git"
+        }
+    ],
     "require": {
         "php": ">=5.5.9",
         "illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.*",
-        "prettus/l5-repository": "~2.6",
+        "prettus/l5-repository": "dev-master",
         "laracasts/flash": "~3.0"
     },
     "require-dev": {
